--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,6 @@ minecraft_version_range=[1.18.1, 1.19]
 forge_version=39.0.58
 loader_version_range=[39,)
 forge_version_range=[39.0.58,]
+
+# Publishing
+curse_project_id=571116
