--- a/build.gradle
+++ b/build.gradle
@@ -158,7 +158,7 @@ curseforge {
         id = curse_project_id
         changelog = file('changelog.html')
         changelogType = 'html'
-        releaseType = 'beta'
+        releaseType = 'alpha'
         addGameVersion "${minecraft_version}"
     }
 }
